--- a/game/package.json
+++ b/game/package.json
@@ -14,6 +14,7 @@
     "next-auth": "^4.24.11",
     "react": "18.x",
     "react-dom": "18.x",
+    "react-icons": "^5.5.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
